--- a/chore_tracker/chore_app/templates/chore_app/addChore.html
+++ b/chore_tracker/chore_app/templates/chore_app/addChore.html
@@ -4,4 +4,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="{% static 'chore_app/style.css' %}"/>
 
-<link rel="icon" type="image/png" sizes="16x16" href="{% static 'chore_app/images/chore_tracker_16x16.png' %}">
+<link rel="icon" type="image/png" sizes="16x16" href="{% static 'chore_app/images/icon2.png' %}">
+
+<title>New Chore</title>
+<body>
+	<nav class="navbar navbar-inverse navbar-static-top">
+		<div class="container-fluid">
+			<div class="navbar-header">
+				<a class="navbar-brand" href="{% url 'chore_app:index' %}" class="navbar-brand" text-align="left">Chore Tracker</a>
+				<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+			</div>
+		</div>
+	</nav>
+</body>
