--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'chore_app/css/bootstrap.min.css' %}"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="{% static 'chore_app/style.css' %}"/>
-<link rel="icon" type="image/png" sizes="16x16" href="{% static 'chore_app/images/chore_tracker_16x16.png' %}">
+<link rel="icon" type="image/png" sizes="16x16" href="{% static 'chore_app/images/icon2.png' %}">
 
 <!-- set the heading to the housemate's first name, from database -->
 <title>Details</title>
@@ -10,7 +10,7 @@
 		<nav class="navbar navbar-inverse navbar-static-top">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="#" class="navbar-brand" text-align="left">Chore Tracker</a>
+					<a class="navbar-brand" href="{% url 'chore_app:index' %}" class="navbar-brand" text-align="left">Chore Tracker</a>
 					<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
@@ -26,7 +26,7 @@
 					{% for chore in housemate.chore_set.all %}
 					<!-- For all of the chores in the chore set, 
 						display the ones assigned to housemate.first_name -->
-					    <li>{{ chore.chore_title }}</li>
+					    <li>{{ chore.chore_title }} -- Due: {{chore.due_date}}</li>
 					{% endfor %}
 					</ul>
 				</div>
