--- a/chore_tracker/chore_app/templates/chore_app/index.html
+++ b/chore_tracker/chore_app/templates/chore_app/index.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'chore_app/css/bootstrap.min.css' %}"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="{% static 'chore_app/style.css' %}"/>
-<link rel="icon" type="image/png" sizes="16x16" href="{% static 'chore_app/images/chore_tracker_16x16.png' %}">
+<link rel="icon" type="image/png" sizes="16x16" href="{% static 'chore_app/images/icon2.png' %}">
 
 
 <title>Housemate</title>
@@ -11,7 +11,7 @@
 	<nav class="navbar navbar-inverse navbar-static-top">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="#" class="navbar-brand" text-align="left">Chore Tracker</a>
+				<a class="navbar-brand" href="{% url 'chore_app:index' %}" class="navbar-brand" text-align="left">Chore Tracker</a>
 				<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
@@ -32,5 +32,6 @@
 		<!-- print statement displaying no names available -->
 	    <p>No names are available.</p>
 {% endif %}
+<a href="{% url 'chore_app:addHousemate' %}" class="btn btn-primary" role="button">Add Housemate</a></button>
 
 </body>
