Changed housemate title to Home

--- a/chore_tracker/chore_app/templates/chore_app/index.html
+++ b/chore_tracker/chore_app/templates/chore_app/index.html
@@ -6,7 +6,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="{% static 'chore_app/images/icon2.png' %}">
 
 
-<title>Housemate</title>
+<title>Home</title>
 <body>
 	<nav class="navbar navbar-inverse navbar-static-top">
 		<div class="container-fluid">
