--- a/chore_tracker/chore_app/templates/chore_app/index.html
+++ b/chore_tracker/chore_app/templates/chore_app/index.html
@@ -32,6 +32,8 @@
 		<!-- print statement displaying no names available -->
 	    <p>No names are available.</p>
 {% endif %}
-<a href="{% url 'chore_app:addHousemate' %}" class="btn btn-primary" role="button">Add Housemate</a></button>
+	<div class="button">
+		<a href="{% url 'chore_app:addHousemate' %}" class="btn btn-primary" role="button">Add Housemate</a></button>
+	</div>
 
 </body>
