--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -1,31 +1,47 @@
 {% load staticfiles %}
+<head>
 <link rel="stylesheet" type="text/css" href="{% static 'chore_app/css/bootstrap.min.css' %}"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="{% static 'chore_app/style.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'chore_app/css.stylesheet.css' %}">
 <link rel="icon" type="image/png" sizes="16x16" href="{% static 'chore_app/images/icon2.png' %}">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="js/bootstrap.js"></script>
+</head>
 
 <!-- set the heading to the housemate's first name, from database -->
 <title>Details</title>
-	<body>
-		<nav class="navbar navbar-inverse navbar-static-top">
-			<div class="container-fluid">
-				<div class="navbar-header">
-					<a class="navbar-brand" href="{% url 'chore_app:index' %}" class="navbar-brand" text-align="left">Chore Tracker</a>
-					<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-				</div>
+<body>
+	<nav class="navbar navbar-inverse navbar-static-top">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="{% url 'chore_app:index' %}">Chore Tracker</a>
+			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<div class="collapse navbar-collapse navHeaderCollapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">About</a></li>
+							<li><a href="#">Preferences</a></li>
+							<li><a href="#">Help</a></li>
+						</ul>
+					</li>
+				</ul>
 			</div>
-		</nav>
-		<div class="text">
-			<h1>{{housemate.full_name }}{{chore.chore_title}}</h1>
-				<div class="chore">
+		</div>
+	</nav>
+		<div>
+			<h1 style="position: relative; left: 10px;">{{housemate.full_name }}{{chore.chore_title}}</h1>
+				<div style="width: 100%;">
 					{% for chore in housemate.chore_set.all %}
 					<!-- For all of the chores in the chore set, 
 						display the ones assigned to housemate.first_name -->
-						<table padding="10" class="table table-hover">
+						<table class="table table-hover">
 							<tr>
 								<th class="info">Chore Title</th>
 								<th class="info">Due Date</th>
@@ -41,4 +57,4 @@
 				<a href="{% url 'chore_app:addChore' housemate.id %}" class="btn btn-primary" role="button">Add Chore</a></button>
 			</div>
 		</div>
-	</body>
+</body>
