--- a/chore_tracker/chore_app/templates/chore_app/index.html
+++ b/chore_tracker/chore_app/templates/chore_app/index.html
@@ -1,33 +1,53 @@
 {% load staticfiles %}
-
+<head>
 <link rel="stylesheet" type="text/css" href="{% static 'chore_app/css/bootstrap.min.css' %}"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="{% static 'chore_app/style.css' %}"/>
+<link rel="stylesheet" type="text/css" href="{% static 'chore_app/css.stylesheet.css' %}">
 <link rel="icon" type="image/png" sizes="16x16" href="{% static 'chore_app/images/icon2.png' %}">
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="js/bootstrap.js"></script>
+</head>
 
 <title>Home</title>
 <body>
 	<nav class="navbar navbar-inverse navbar-static-top">
 		<div class="container-fluid">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="{% url 'chore_app:index' %}" class="navbar-brand" text-align="left">Chore Tracker</a>
-				<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
+			<a class="navbar-brand" href="{% url 'chore_app:index' %}">Chore Tracker</a>
+			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<div class="collapse navbar-collapse navHeaderCollapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">About</a></li>
+							<li><a href="#">Preferences</a></li>
+							<li><a href="#">Help</a></li>
+						</ul>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</nav>
 	{% if alphabetical_order %}
-	<h1>Housemates:</h1>
+	<div style="position: relative; left:15; width: 400; bottom: 10">
+		<h1>Housemates:</h1>
+	</div>
 		<!-- If names exist in database, list them out in for loop -->
-	    <ul>
-	    {% for housemate in alphabetical_order %}
-	        <li><a href="{% url 'chore_app:detail' housemate.id %}">{{ housemate.full_name }}</a></li>
-	    {% endfor %}
-	    </ul>
+		<div>
+		    <ul>
+		    {% for housemate in alphabetical_order %}
+		    	<div>
+		        	<li><a style="font-size: 26; color: green" class="hover" href="{% url 'chore_app:detail' housemate.id %}">{{ housemate.full_name }}</a></li>
+		    	</div>
+		    {% endfor %}
+		    </ul>
+		</div>
 	{% else %}
 		<!-- print statement displaying no names available -->
 	    <p>No names are available.</p>
@@ -35,5 +55,4 @@
 	<div class="button">
 		<a href="{% url 'chore_app:addHousemate' %}" class="btn btn-primary" role="button">Add Housemate</a></button>
 	</div>
-
 </body>
