--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -36,7 +36,7 @@
 		</div>
 	</nav>
 		<div>
-			<h1 style="position: relative; left: 10px;">{{housemate.full_name }}{{chore.chore_title}}</h1>
+			<h1 style="position: relative; left: 10px; width: 500;">{{housemate.full_name }}{{chore.chore_title}}</h1>
 				<div style="width: 100%;">
 					{% for chore in housemate.chore_set.all %}
 					<!-- For all of the chores in the chore set, 
