Table lists everything properly by 'cycling' through all data entries

--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -46,12 +46,10 @@
 								<th class="info">Due Date</th>
 							</tr>
 							{% for chore in housemate.chore_set.all %}
-							{% cycle '' '<tr>' '' '' %}
-
-									<td> {{ chore.chore_title}} </td>
-									<td> {{ chore.due_date }} </td>
-
-							{% cycle '' '' '' '</tr>' '' %}
+							{% cycle '<tr>' '' %}
+								<td> {{ chore.chore_title}} </td>
+								<td> {{ chore.due_date }} </td>
+							{% cycle '</tr>' ''%}
 							{% endfor %}
 						</table>
 				</div>
