--- a/chore_tracker/chore_app/templates/chore_app/addHousemate.html
+++ b/chore_tracker/chore_app/templates/chore_app/addHousemate.html
@@ -20,13 +20,11 @@
 			</div>
 		</div>
 	</nav>
-	<hi style="position: relative; left: 10px; width: 400; font-size: 25; color: green">Add Housemate</hi> 
-
-	<form method='POST' action='' style="position: relative;left: 10px">{% csrf_token %}		
-	{{ form.as_p }}
-	<form>
-	<input style="position: relative; left: 30px;" type='submit' class = "btn btn-info pull-left" value='Add Housemate'/>
-
+	<h1 style="position: relative; left: 10px; width: 400; font-size: 25; color: green">Add Housemate</h1> 
+	<form method='post' action='' style="position: relative;left: 10px">{% csrf_token %}		
+		{{ form.as_p }}
+		<input style="position: relative; left: 30px;" type='submit' class = "btn btn-info pull-left" value='Add Housemate'/>
+	</form>
 	<div class="button">
 		<a href="{% url 'chore_app:index' %}" class="btn btn-info pull-left" role="button">Cancel</a></button>
 	</div>
