Deleted background image

--- a/chore_tracker/chore_app/templates/chore_app/index.html
+++ b/chore_tracker/chore_app/templates/chore_app/index.html
@@ -12,7 +12,7 @@
 
 <style>
 body {
-	background-image: url("{% static 'chore_app/images/housemate.jpg' %}");
+	/*background-image: url("{% static 'chore_app/images/housemate.jpg' %}");*/
 }
 </style>
 
