--- a/chore_tracker/chore_app/templates/chore_app/index.html
+++ b/chore_tracker/chore_app/templates/chore_app/index.html
@@ -21,7 +21,7 @@ body {
 	<!-- Black navbar header -->
 	<nav class="navbar navbar-inverse navbar-static-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="{% url 'chore_app:index' %}">Chore Tracker</a>
+			<a class="navbar-brand" href="{% url 'chore_app:index' %}" style="font-family:Cambria">Chore Tracker</a>
 			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -31,7 +31,7 @@ body {
 				<ul class="nav navbar-nav navbar-right">
 					<!-- Settings dropdown menu -->
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings<b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="font-family:Cambria">Settings<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="#">About</a></li>
 							<li><a href="#">Preferences</a></li>
@@ -52,7 +52,7 @@ body {
 		    <ul>
 		    {% for housemate in alphabetical_order %}
 		    	<div>
-		        	<li><a style="font-size: 26; color: green" class="hover" href="{% url 'chore_app:detail' housemate.id %}">{{ housemate.full_name }}</a></li>
+		        	<li><a style="font-size: 26; font-family: Cambria; color: green" class="hover" href="{% url 'chore_app:detail' housemate.id %}">{{ housemate.full_name }}</a></li>
 		    	</div>
 		    {% endfor %}
 		    </ul>
