--- a/chore_tracker/chore_app/templates/chore_app/addHousemate.html
+++ b/chore_tracker/chore_app/templates/chore_app/addHousemate.html
@@ -1,31 +1,47 @@
 {% load staticfiles %}
-
+<head>
 <link rel="stylesheet" type="text/css" href="{% static 'chore_app/css/bootstrap.min.css' %}"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="{% static 'chore_app/style.css' %}"/>
-
+<link rel="stylesheet" type="text/css" href="{% static 'chore_app/css.stylesheet.css' %}">
 <link rel="icon" type="image/png" sizes="16x16" href="{% static 'chore_app/images/icon2.png' %}">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="js/bootstrap.js"></script>
+</head>
 
 <title>New Housemate</title>
 <body>
+	<!-- Black navbar header -->
 	<nav class="navbar navbar-inverse navbar-static-top">
 		<div class="container-fluid">
-			<div class="navbar-header">
-				<a class="navbar-brand" href="{% url 'chore_app:index' %}" class="navbar-brand" text-align="left">Chore Tracker</a>
-				<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
+			<a class="navbar-brand" href="{% url 'chore_app:index' %}" style="font-family:Cambria">Chore Tracker</a>
+			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<div class="collapse navbar-collapse navHeaderCollapse">
+				<ul class="nav navbar-nav navbar-right">
+					<!-- Settings dropdown menu -->
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="font-family:Cambria">Settings<b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li><a href="#">About</a></li>
+							<li><a href="#">Preferences</a></li>
+							<li><a href="#">Help</a></li>
+						</ul>
+					</li>
+				</ul>
 			</div>
 		</div>
 	</nav>
-	<h1 style="position: relative; left: 10px; width: 400; font-size: 25; color: green">Add Housemate</h1> 
+	<h1 style="position: relative; left: 10px; width: 400; font-size: 25;">Add Housemate</h1> 
 	<form method='post' action='' style="position: relative;left: 10px">{% csrf_token %}		
 		{{ form.as_p }}
-		<input style="position: relative; left: 30px;" type='submit' class = "btn btn-info pull-left" value='Add Housemate'/>
+		<input style="position: relative;" type='submit' class = "btn btn-success pull-left" value='Add Housemate'/>
+		<div class="cancel">
+			<a href="{% url 'chore_app:index' %}" class="btn btn-danger" role="button">Cancel</a></button>
+		</div>
 	</form>
-	<div class="button">
-		<a href="{% url 'chore_app:index' %}" class="btn btn-info pull-left" role="button">Cancel</a></button>
-	</div>
 </body>
