--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -13,9 +13,10 @@
 <!-- set the heading to the housemate's first name, from database -->
 <title>Details</title>
 <body>
+	<!-- Black navbar header -->
 	<nav class="navbar navbar-inverse navbar-static-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="{% url 'chore_app:index' %}">Chore Tracker</a>
+			<a class="navbar-brand" href="{% url 'chore_app:index' %}" style="font-family:Cambria">Chore Tracker</a>
 			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -23,8 +24,9 @@
 			</button>
 			<div class="collapse navbar-collapse navHeaderCollapse">
 				<ul class="nav navbar-nav navbar-right">
+					<!-- Settings dropdown menu -->
 					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings<b class="caret"></b></a>
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="font-family:Cambria">Settings<b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="#">About</a></li>
 							<li><a href="#">Preferences</a></li>
@@ -48,9 +50,10 @@
 							</tr>
 							{% for chore in housemate.chore_set.all %}
 							{% cycle '<tr>' '' %}
-								<td>  <input type="checkbox" style="position: relative; left: 10px;">  </td>
+								<td><input type="checkbox" style="position: relative; left: 10px;" value= '{{ chore }}' ></td>
 								<td> {{ chore.chore_title}} </td>
 								<td> {{ chore.due_date }} </td>
+								<td style="text-align: center;"><a href="{% url 'chore_app:detail' housemate.id %}" class="btn btn-danger" role="button">Delete Chore</a></td>
 							{% cycle '</tr>' ''%}
 							{% endfor %}
 						</table>
