--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -47,6 +47,7 @@
 								<th class="info">Status</th>
 								<th class="info">Chore Title</th>
 								<th class="info">Due Date</th>
+								<th class="info"></th>
 							</tr>
 							{% for chore in housemate.chore_set.all %}
 							{% cycle '<tr>' '' %}
