--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -38,7 +38,7 @@
 		</div>
 	</nav>
 		<div>
-			<h1 style="position: relative; left: 10px; width: 500;">{{housemate.full_name }}{{chore.chore_title}}</h1>
+			<h1 style="position: relative; left: 10px; width: 500;">{{housemate.full_name }}</h1>
 				<div style="width: 100%;">
 					<!-- For all of the chores in the chore set, 
 						display the ones assigned to housemate.first_name -->
@@ -54,7 +54,7 @@
 								<td><input type="checkbox" style="position: relative; left: 10px;" value= '{{ chore }}' ></td>
 								<td> {{ chore.chore_title}} </td>
 								<td> {{ chore.due_date }} </td>
-								<td style="text-align: center;"><a href="{% url 'chore_app:detail' housemate.id %}" class="btn btn-danger" role="button">Delete Chore</a></td>
+								<td style="text-align: center;"><a href="{% url 'chore_app:delete' housemate.id chore.chore_title %}" class="btn btn-danger" role="button">Delete</a></td>
 							{% cycle '</tr>' ''%}
 							{% endfor %}
 						</table>
