--- a/chore_tracker/chore_app/templates/chore_app/index.html
+++ b/chore_tracker/chore_app/templates/chore_app/index.html
@@ -52,7 +52,10 @@ body {
 		    <ul>
 		    {% for housemate in alphabetical_order %}
 		    	<div>
-		        	<li><a style="font-size: 26; font-family: Cambria; color: green" class="hover" href="{% url 'chore_app:detail' housemate.id %}">{{ housemate.full_name }}</a></li>
+		        	<li>
+		        		<a style="font-size: 26; font-family: Cambria; color: green; text-decoration: none;" href="{% url 'chore_app:detail' housemate.id %}">{{ housemate.full_name }}</a>
+		        		<a href="{% url 'chore_app:editInfo' housemate.id %}" class="btn btn-info edit-info">Edit info</a>
+		        	</li>
 		    	</div>
 		    {% endfor %}
 		    </ul>
