Added text input boxes to edit info template

--- a/chore_tracker/chore_app/templates/chore_app/editInfo.html
+++ b/chore_tracker/chore_app/templates/chore_app/editInfo.html
@@ -37,8 +37,15 @@
 		</div>
 	</nav>
 	<h1 style="position: relative; left: 10px; width: 400; font-size: 25;">Edit Housemate</h1> 
-	<form method='POST' action='' style="position: relative;left: 10px">{% csrf_token %}		
-		{{ form.as_p }}
+	<form method='POST' action='' style="position: relative;left: 10px">
+		{% csrf_token %}
+		<label>First name</label> 
+		<input type='text' name='first_name'/>
+		<label>Last name</label>
+		<input type='text' name='Last name'/>
+		<label>Email</label>
+		<input type='text' name='Email'/></br>
+
 		<input style="position: relative;" type='submit' class = "btn btn-success pull-left" value='Save'/>
 		<div class="cancel">
 			<a href="{% url 'chore_app:index' %}" class="btn btn-danger" role="button">Cancel</a></button>
