--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -16,7 +16,7 @@
 	<!-- Black navbar header -->
 	<nav class="navbar navbar-inverse navbar-static-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="{% url 'chore_app:index' %}" style="font-family:Cambria">Chore Tracker</a>
+			<a class="navbar-brand" href="{% url 'chore_app:index' %}" style="font-family:Cambria"> <span class="glyphicon glyphicon-home"></span> Chore Tracker</a>
 			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -65,7 +65,10 @@
 									<td> {{ chore.chore_title}} </td>
 									<td> {{ chore.due_date }} </td>
 								{% endif %}
-								<td style="text-align: center;"><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button">Delete</a></td>
+								<td style="text-align: center;"><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button"> 
+									<span class="glyphicon glyphicon-trash"></span> </a>
+								</td>
+
 							{% cycle '</tr>' ''%}
 							{% endfor %}
 						</table>
