Removed house glyphicon from Chore Tracker main page link.

--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+
 <head>
 <link rel="stylesheet" type="text/css" href="{% static 'chore_app/css/bootstrap.min.css' %}"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +17,7 @@
 	<!-- Black navbar header -->
 	<nav class="navbar navbar-inverse navbar-static-top">
 		<div class="container-fluid">
-			<a class="navbar-brand" href="{% url 'chore_app:index' %}" style="font-family:Cambria"> <span class="glyphicon glyphicon-home"></span> Chore Tracker</a>
+			<a class="navbar-brand" href="{% url 'chore_app:index' %}" style="font-family:Cambria"></span> Chore Tracker</a>
 			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -40,16 +41,16 @@
 		<div>
 			<h1 style="position: relative; left: 10px; width: 500;">{{housemate.full_name }}</h1>
 				<div style="width: 100%;">
-					<!-- For all of the chores in the chore set, 
-						display the ones assigned to housemate.first_name -->
-						<table class="table table-hover">
+					<table class="table table-hover">
+							<td class="info" style="text-align: center; font-size: 24; font-weight: bold; background-color: red" colspan="4"> OVERDUE</td>
 							<tr>
 								<th class="info">Status</th>
 								<th class="info">Chore Title</th>
 								<th class="info">Due Date</th>
 								<th class="info"></th>
 							</tr>
-							{% for chore in housemate.chore_set.all %}
+							
+							{% for chore in overdue_set %}
 							{% cycle '<tr>' '' %}
 								{% if chore.is_done %}
 									<td>
@@ -57,6 +58,117 @@
 										{% csrf_token %}
 										<input type="checkbox" style="position: relative; left: 10px;" name='status' value='is_done' checked />
 										</form>
+									</td>
+									<td><strike> {{ chore.chore_title }} </strike></td>
+									<td><strike> {{ chore.due_date }} </strike></td>
+								{% else %}
+									<td><input type="checkbox" style="position: relative; left: 10px;" name='status'/></td>
+									<td> {{ chore.chore_title}} </td>
+									<td> {{ chore.due_date }} </td>
+								{% endif %}
+								<td style="text-align: center;"><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button"> 
+									<span class="glyphicon glyphicon-trash"></span> </a>
+								</td>
+
+							{% cycle '</tr>' ''%}
+							{% endfor %}
+						</table>
+				</div>
+			<div class="button">
+				<a href="{% url 'chore_app:addChore' housemate.id %}" class="btn btn-primary" role="button">Add Chore</a></button>
+			</div>
+		</div>
+					<table class="table table-hover">
+							<td class="info" style="text-align: center; font-size: 24; font-weight: bold; background-color: rgb(153, 204, 255)" colspan="4"> TODAY</td>
+							<tr>
+								<th class="info">Status</th>
+								<th class="info">Chore Title</th>
+								<th class="info">Due Date</th>
+								<th class="info"></th>
+							</tr>
+							
+							{% for chore in today_set %}
+							{% cycle '<tr>' '' %}
+								{% if chore.is_done %}
+									<td>
+										<form method='POST' action=''>
+										{% csrf_token %}
+										<input type="checkbox" style="position: relative; left: 10px;" name='status' value='is_done' checked />
+										</form>
+									</td>
+									<td><strike> {{ chore.chore_title }} </strike></td>
+									<td><strike> {{ chore.due_date }} </strike></td>
+								{% else %}
+									<td><input type="checkbox" style="position: relative; left: 10px;" name='status'/></td>
+									<td> {{ chore.chore_title}} </td>
+									<td> {{ chore.due_date }} </td>
+								{% endif %}
+								<td style="text-align: center;"><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button"> 
+									<span class="glyphicon glyphicon-trash"></span> </a>
+								</td>
+
+							{% cycle '</tr>' ''%}
+							{% endfor %}
+						</table>
+				</div>
+			<div class="button">
+				<a href="{% url 'chore_app:addChore' housemate.id %}" class="btn btn-primary" role="button">Add Chore</a></button>
+			</div>
+		</div>
+		<div>
+			<table class="table table-hover">
+				<td class="info" style="text-align: center; font-size: 24; font-weight: bold; background-color: rgb(153, 204, 255)" colspan="4"> TOMORROW</td>
+				<tr>
+					<th class="info">Status</th>
+					<th class="info">Chore Title</th>
+					<th class="info">Due Date</th>
+					<th class="info"></th>
+				</tr>
+							
+				{% for chore in tomorrow_set %}
+				{% cycle '<tr>' '' %}
+						{% if chore.is_done %}
+							<td>
+								<form method='POST' action=''>
+								{% csrf_token %}
+								<input type="checkbox" style="position: relative; left: 10px;" name='status' value='is_done' checked /></form>
+									</td>
+									<td><strike> {{ chore.chore_title }} </strike></td>
+									<td><strike> {{ chore.due_date }} </strike></td>
+								{% else %}
+									<td><input type="checkbox" style="position: relative; left: 10px;" name='status'/></td>
+									<td> {{ chore.chore_title}} </td>
+									<td> {{ chore.due_date }} </td>
+								{% endif %}
+								<td style="text-align: center;"><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button"> 
+									<span class="glyphicon glyphicon-trash"></span> </a>
+								</td>
+
+							{% cycle '</tr>' ''%}
+							{% endfor %}
+						</table>
+				</div>
+			<div class="button">
+				<a href="{% url 'chore_app:addChore' housemate.id %}" class="btn btn-primary" role="button">Add Chore</a></button>
+			</div>
+		</div>
+		<div>
+			<table class="table table-hover">
+				<td class="info" style="text-align: center; font-size: 24; font-weight: bold; background-color: rgb(153, 204, 255)" colspan="4"> UPCOMING</td>
+				<tr>
+					<th class="info">Status</th>
+					<th class="info">Chore Title</th>
+					<th class="info">Due Date</th>
+					<th class="info"></th>
+				</tr>
+							
+				{% for chore in upcoming_set %}
+				{% cycle '<tr>' '' %}
+						{% if chore.is_done %}
+							<td>
+								<form method='POST' action=''>
+								{% csrf_token %}
+								<input type="checkbox" style="position: relative; left: 10px;" name='status' value='is_done' checked /></form>
 									</td>
 									<td><strike> {{ chore.chore_title }} </strike></td>
 									<td><strike> {{ chore.due_date }} </strike></td>
