Sections for Overdue, Today, Tomorrow and Upcoming
Sections for Overdue, Today, Tomorrow and Upcoming.  Datetime is still
not collecting accurate date and time.

--- a/chore_tracker/chore_app/templates/chore_app/detail.html
+++ b/chore_tracker/chore_app/templates/chore_app/detail.html
@@ -41,17 +41,18 @@
 		<div>
 			<h1 style="position: relative; left: 10px; width: 500;">{{housemate.full_name }}</h1>
 				<div style="width: 100%;">
-					<table class="table table-hover">
-							<td class="info" style="text-align: center; font-size: 24; font-weight: bold; background-color: red" colspan="4"> OVERDUE</td>
-							<tr>
-								<th class="info">Status</th>
-								<th class="info">Chore Title</th>
-								<th class="info">Due Date</th>
-								<th class="info"></th>
-							</tr>
+			<!-- Overdue Chore Table -->
+			<table class="table table-hover">
+				<td class="info" style="text-align: center; font-size: 24; font-weight: bold; background-color: red" colspan="4"> OVERDUE</td>
+				<tr>
+					<th class="info">Status</th>
+					<th class="info">Chore Title</th>
+					<th class="info">Due Date</th>
+					<th class="info"></th>
+				</tr>
 							
-							{% for chore in overdue_set %}
-							{% cycle '<tr>' '' %}
+				{% for chore in overdue_set %}
+				{% cycle '<tr>' '' %}
 								{% if chore.is_done %}
 									<td>
 										<form method='POST' action=''>
@@ -69,26 +70,21 @@
 								<td style="text-align: center;"><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button"> 
 									<span class="glyphicon glyphicon-trash"></span> </a>
 								</td>
-
 							{% cycle '</tr>' ''%}
 							{% endfor %}
-						</table>
-				</div>
-			<div class="button">
-				<a href="{% url 'chore_app:addChore' housemate.id %}" class="btn btn-primary" role="button">Add Chore</a></button>
-			</div>
-		</div>
-					<table class="table table-hover">
-							<td class="info" style="text-align: center; font-size: 24; font-weight: bold; background-color: rgb(153, 204, 255)" colspan="4"> TODAY</td>
-							<tr>
-								<th class="info">Status</th>
-								<th class="info">Chore Title</th>
-								<th class="info">Due Date</th>
-								<th class="info"></th>
-							</tr>
+			</table>
+			<!-- Today Chore Table -->
+			<table class="table table-hover">
+				<td class="info" style="text-align: center; font-size: 24; font-weight: bold; background-color: rgb(153, 204, 255)" colspan="4"> TODAY</td>
+				<tr>
+					<th class="info">Status</th>
+					<th class="info">Chore Title</th>
+					<th class="info">Due Date</th>
+					<th class="info"></th>
+				</tr>
 							
-							{% for chore in today_set %}
-							{% cycle '<tr>' '' %}
+				{% for chore in today_set %}
+				{% cycle '<tr>' '' %}
 								{% if chore.is_done %}
 									<td>
 										<form method='POST' action=''>
@@ -106,16 +102,10 @@
 								<td style="text-align: center;"><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button"> 
 									<span class="glyphicon glyphicon-trash"></span> </a>
 								</td>
-
 							{% cycle '</tr>' ''%}
 							{% endfor %}
-						</table>
-				</div>
-			<div class="button">
-				<a href="{% url 'chore_app:addChore' housemate.id %}" class="btn btn-primary" role="button">Add Chore</a></button>
-			</div>
-		</div>
-		<div>
+			</table>
+			<!-- Tomorrow Chore Table -->
 			<table class="table table-hover">
 				<td class="info" style="text-align: center; font-size: 24; font-weight: bold; background-color: rgb(153, 204, 255)" colspan="4"> TOMORROW</td>
 				<tr>
@@ -127,11 +117,12 @@
 							
 				{% for chore in tomorrow_set %}
 				{% cycle '<tr>' '' %}
-						{% if chore.is_done %}
-							<td>
-								<form method='POST' action=''>
-								{% csrf_token %}
-								<input type="checkbox" style="position: relative; left: 10px;" name='status' value='is_done' checked /></form>
+								{% if chore.is_done %}
+									<td>
+										<form method='POST' action=''>
+										{% csrf_token %}
+										<input type="checkbox" style="position: relative; left: 10px;" name='status' value='is_done' checked />
+										</form>
 									</td>
 									<td><strike> {{ chore.chore_title }} </strike></td>
 									<td><strike> {{ chore.due_date }} </strike></td>
@@ -143,16 +134,10 @@
 								<td style="text-align: center;"><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button"> 
 									<span class="glyphicon glyphicon-trash"></span> </a>
 								</td>
-
 							{% cycle '</tr>' ''%}
 							{% endfor %}
-						</table>
-				</div>
-			<div class="button">
-				<a href="{% url 'chore_app:addChore' housemate.id %}" class="btn btn-primary" role="button">Add Chore</a></button>
-			</div>
-		</div>
-		<div>
+			</table>
+			<!-- Upcoming Chore Table -->
 			<table class="table table-hover">
 				<td class="info" style="text-align: center; font-size: 24; font-weight: bold; background-color: rgb(153, 204, 255)" colspan="4"> UPCOMING</td>
 				<tr>
@@ -164,11 +149,12 @@
 							
 				{% for chore in upcoming_set %}
 				{% cycle '<tr>' '' %}
-						{% if chore.is_done %}
-							<td>
-								<form method='POST' action=''>
-								{% csrf_token %}
-								<input type="checkbox" style="position: relative; left: 10px;" name='status' value='is_done' checked /></form>
+								{% if chore.is_done %}
+									<td>
+										<form method='POST' action=''>
+										{% csrf_token %}
+										<input type="checkbox" style="position: relative; left: 10px;" name='status' value='is_done' checked />
+										</form>
 									</td>
 									<td><strike> {{ chore.chore_title }} </strike></td>
 									<td><strike> {{ chore.due_date }} </strike></td>
@@ -180,10 +166,9 @@
 								<td style="text-align: center;"><a href="{% url 'chore_app:deleteChore' housemate.id chore.id %}" class="btn btn-danger" role="button"> 
 									<span class="glyphicon glyphicon-trash"></span> </a>
 								</td>
-
 							{% cycle '</tr>' ''%}
 							{% endfor %}
-						</table>
+			</table>
 				</div>
 			<div class="button">
 				<a href="{% url 'chore_app:addChore' housemate.id %}" class="btn btn-primary" role="button">Add Chore</a></button>
